# tda-i-tps

tp0/alumno-mas-bajo/: README.md  pyproject.toml
tp0/alumno-mas-bajo/alumno_mas_bajo/: inicial.py  solucion.py
tp0/alumno-mas-bajo/tests/: test_indice_mas_bajo.py  test_validar_mas_bajo.py  utils.py
tp0/grafo-bipartito/: README.md  pyproject.toml
tp0/grafo-bipartito/grafo_bipartito/: inicial.py  solucion.py
tp0/grafo-bipartito/tests/: test_es_bipartito.py  utils.py
tp1/: Makefile  README.md  analizar.py  enunciado.md  main.py  pyproject.toml
tp1/notebooks/: Calculo de tiempos.ipynb  Crear archivos de analisis.ipynb  Untitled.ipynb  dev.ipynb  tp1-A_i-mayor_a_menor.ipynb  tp1-S_i-menor_a_mayor.ipynb
tp1/notebooks/data/: 100000 elementos.txt  140000 elementos.txt  170000 elementos.txt  190000 elementos.txt  20000 elementos.txt  230000 elementos.txt  270000 elementos.txt  40000 elementos.txt  50000 elementos.txt  60000 elementos.txt  70000 elementos.txt
tp1/report/: estilo.cls
tp1/report/source/: main.tex
tp1/tests/: crear_archivo_de_analisis.py  crear_archivos_de_analisis.py  test_leer_archivo.py  test_tiempo_optimo.py
tp1/tests/data/: 10000 elementos.txt  110000 elementos.txt  120000 elementos.txt  130000 elementos.txt  (+15 more)
tp1/tp1/: leer_archivo.py  manejo_archivos_analisis.py  tiempo_optimo.py
tp3/: .gitignore  Makefile  README.md  enunciado.md  pyproject.toml
tp3/notebooks/: 10.txt  100.txt  1000.txt  10000.txt  100_bis.txt  10_bis.txt  11000.txt  110_bis.txt  12000.txt  120_bis.txt  13000.txt  130_bis.txt  14000.txt  140_bis.txt  15000.txt  150_bis.txt  16000.txt  160_bis.txt  17000.txt  170_bis.txt  18000.txt  180_bis.txt  19000.txt  190_bis.txt  20.txt  200.txt  2000.txt  20000.txt  200_bis.txt  20_bis.txt  21000.txt  210_bis.txt  22000.txt  220_bis.txt  23000.txt  230_bis.txt  24000.txt  240_bis.txt  25000.txt  250_bis.txt  (+81 more)
tp3/tests/: test_algoritmos.py  test_seleccion_jugadores.py
tp3/tp3/: HittingSetBacktracking.py  algoritmos.py  archivos.py  pyproject.toml  seleccion_jugadores.py  selector.py
(+31 files in other folders)
