[tool.poetry]
name = "tp1"
version = "0.1.0"
description = ""
authors = ["Borja Garibotti <mgaribotti@fi.uba.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
exceptiongroup = "^1.1.3"
matplotlib = "^3.7.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
