[tool.poetry]
name = "tp3"
version = "0.1.0"
description = ""
authors = ["Juli Taras <julibtaras@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
jupyter = "^1.0.0"
pandas = ">=2.0.0,<2.1.0"
pytest = "^7.4.3"
pulp = "^2.7.0"
matplotlib = ">=3.7.0,<3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
